--- a/LaTex/Handout.tex
+++ b/LaTex/Handout.tex
@@ -1,42 +1,33 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage{fullpage}
-\usepackage{scrextend}
 \usepackage{ngerman}
-\usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{setspace}
 \usepackage{mathtools}
-\usepackage[automark]{scrpage2}
 
 \setcounter{section}{1}
-% \setlength{\textwidth}{14cm}
-% \setlength{\oddsidemargin}{0mm}
-% \setlength{\evensidemargin}{0mm}
-% \setlength{\unitlength}{1mm}
-% \setlength{\textheight}{22cm}
-% \setlength{\voffset}{0cm}
+\setlength{\textwidth}{15cm}
+\setlength{\unitlength}{1mm}
+\setlength{\textheight}{23cm}
 
 \title{Das Verfahren der konjugierten Gradienten}
 \author{Michael Bauer}
-\date{\today{}}
+\date{11. November 2013}
 
 \begin{document}
 \maketitle
-% \onehalfspacing
-
 
 \section*{}
 
 %1.1 Motivation
 \subsection{Motivation}
-\label{sec:motivation}
 Löse ein Gleichungssystem $Ax = b$, wobei $A\in\mathbb{R}^{n}$ s.p.d., $x, b\in\mathbb{R}^{n}$ und n sehr groß.
 
 %1.2. Definition (A-orthogonal)
 \subsection{Definition (A-orthogonal)}
-Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x$ und $y$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
+Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x,y \in \mathbb{R}^{n}$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
 
 %1.3.Lemma
 \subsection{Lemma}
@@ -44,7 +35,7 @@ Sei $U_{k}$ ein k-dimensionaler Teilraum des $\mathbb{R}^{n} \hspace{1mm} (k \le
 \begin{equation}
 \|u^{k} - v\|_{A} = \underset{u \in U_{k}}{\min} \|u - v\|_{A}
 \end{equation}
-genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außrdem hat $\textbf{u}^{k}$ die Darstellung
+genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außerdem hat $\textbf{u}^{k}$ die Darstellung
 \begin{equation}
 P_{U_{k,\langle \cdot,\cdot \rangle}}(v) = \textbf{u}^{k} = \sum_{j=0}^{k-1} \frac {\langle v, p^{j} \rangle _{A}} {\langle p^{j}, p^{j} \rangle _{A}} p^{j}
 \end{equation}
@@ -82,7 +73,7 @@ x^{k} = x^{k-1} + \alpha_{k-1}p^{k-1}, \hspace{2mm} mit \hspace{2mm} \alpha_{k-1
 
 %1.6. Lemma
 \subsection{Lemma}
-Um $U_{k+1}$ zu erhalten, also den Teilraum zu erweitern, muss lediglich das neue Residuum $r^{k} = b - Ax^{k}$ berechnet werden. Dieses erhält man durch:
+Um $U_{k+1}$ zu erhalten, also den Teilraum zu erweitern, muss lediglich das neue Residuum \\$r^{k} = b - Ax^{k}$ berechnet werden. Dieses erhält man durch:
 \begin{equation}
 r^{k} = r^{k-1} - \alpha_{k-1}Ap^{k-1}
 \end{equation}
@@ -120,5 +111,12 @@ Gegeben: $A \in \mathbb{R}^{n}$ s.p.d., $b \in \mathbb{R}^{n}$, Startvektor $x^{
 	r^{k} &= r^{k-1} - \alpha_{k-1}Ap^{k-1}
 \end{align}
 \end{subequations}
+
+%1.15. Literatur
+\subsection{Literatur:}
+\begin{enumerate}
+\item "'Numerik für Ingenieure und Naturwissenschaftler"', \\W.Dahmen \& A.Reusken, 2.,korrigierte Auflage, 2008, Seiten 566-572
+\item "'Finite Elemente"', Braess, Seiten 177-180
+\end{enumerate}
 
 \end{document}
