--- a/LaTex/Seminar.tex
+++ b/LaTex/Seminar.tex
@@ -1,40 +1,31 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage{fullpage}
-\usepackage{scrextend}
 \usepackage{ngerman}
-\usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{setspace}
 \usepackage{mathtools}
-\usepackage[automark]{scrpage2}
 
 \setcounter{section}{1}
-% \setlength{\textwidth}{14cm}
-% \setlength{\oddsidemargin}{0mm}
-% \setlength{\evensidemargin}{0mm}
-% \setlength{\unitlength}{1mm}
-% \setlength{\textheight}{22cm}
-% \setlength{\voffset}{0cm}
+\setlength{\textwidth}{15cm}
+\setlength{\unitlength}{1mm}
+\setlength{\textheight}{22cm}
 
 \title{Das Verfahren der konjugierten Gradienten}
 \author{Michael Bauer}
-\date{\today{}}
+\date{11. November 2013}
 
 \begin{document}
 \maketitle
 \tableofcontents
 \newpage
 \large
-% \onehalfspacing
-
 
 \section*{Das Verfahren der konjugierten Gradienten}
 
 %1.1 Motivation
 \subsection{Motivation}
-\label{sec:motivation}
 Löse ein Gleichungssystem $Ax = b$, wobei $A\in\mathbb{R}^{n}$ s.p.d., $x, b\in\mathbb{R}^{n}$ und n sehr groß.
 
 \subsubsection{Bemerkung:}
@@ -45,7 +36,7 @@ Löse ein Gleichungssystem $Ax = b$, wobei $A\in\mathbb{R}^{n}$ s.p.d., $x, b\in
 
 %1.2. Definition (A-orthogonal)
 \subsection{Definition (A-orthogonal)}
-Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x$ und $y$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
+Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x,y \in \mathbb{R}^{n}$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
 
 %1.3.Satz
 \subsection{Satz}
@@ -82,7 +73,7 @@ Sei $U_{k}$ ein k-dimensionaler Teilraum des $\mathbb{R}^{n} \hspace{1mm} (k \le
 \begin{equation}
 \|u^{k} - v\|_{A} = \underset{u \in U_{k}}{\min} \|u - v\|_{A}
 \end{equation}
-genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außrdem hat $\textbf{u}^{k}$ die Darstellung
+genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außerdem hat $\textbf{u}^{k}$ die Darstellung
 \begin{equation}
 P_{U_{k,\langle \cdot,\cdot \rangle}}(v) = \textbf{u}^{k} = \sum_{j=0}^{k-1} \frac {\langle v, p^{j} \rangle _{A}} {\langle p^{j}, p^{j} \rangle _{A}} p^{j}
 \end{equation}
@@ -215,8 +206,8 @@ Per Induktion über k (klar für k=0):
 & p^{k-1} \in U_{k} = span\{r^{0},...,A^{k-1}r^{0}\}\\
 & da \hspace{2mm} p^{k-1} = (\sum_{i=0}^{k-1} \sigma_{i}A^{i})r^{0}\\
 & \Longrightarrow Ap^{k-1} = (\sum_{i=0}^{k-1} \sigma_{i}A^{i+1})r^{0}\\
-& = \sigma_{0}Ar^{0} + ... + \sigma_{k-1}A{k}r^{0}\\
-& \Longrightarrow r_{k} \in V_{k+1}
+& = \sigma_{0}Ar^{0} + ... + \sigma_{k-1}A^{k}r^{0}\\
+& \Longrightarrow r_{k} \in U_{k+1}
 \end{align*}
 
 %1.11. Satz (Bestimmung einer A-orthogonalen Basis)
@@ -274,5 +265,12 @@ Gegeben: $A \in \mathbb{R}^{n}$ s.p.d., $b \in \mathbb{R}^{n}$, Startvektor $x^{
 	r^{k} &= r^{k-1} - \alpha_{k-1}Ap^{k-1}
 \end{align}
 \end{subequations}
+
+%1.15. Literatur
+\subsection{Literatur:}
+\begin{enumerate}
+\item "'Numerik für Ingenieure und Naturwissenschaftler"', \\W.Dahmen \& A.Reusken, 2.,korrigierte Auflage, 2008, Seiten 566-572
+\item "'Finite Elemente"', Braess, Seiten 177-180
+\end{enumerate}
 
 \end{document}
