--- a/LaTex/Vortrag.tex
+++ b/LaTex/Vortrag.tex
@@ -39,7 +39,7 @@ Löse ein Gleichungssystem $Ax = b$, wobei $A\in\mathbb{R}^{n}$ s.p.d., $x, b\in
 
 %1.2. Definition (A-orthogonal)
 \subsection{Definition (A-orthogonal)}
-Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x$ und $y$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
+Sei $A$ eine symmetrische, nicht singuläre Matrix. Zwei Vektoren $x,y \in \mathbb{R}^{n}$ heißen \underline{\textbf{konjugiert}} oder \underline{\textbf{A-orthogonal}}, wenn $x^{T}Ay = 0$ ist.
 
 %1.3.Satz
 \subsection{Satz}
@@ -76,7 +76,7 @@ Sei $U_{k}$ ein k-dimensionaler Teilraum des $\mathbb{R}^{n} \hspace{1mm} (k \le
 \begin{equation}
 \|u^{k} - v\|_{A} = \underset{u \in U_{k}}{\min} \|u - v\|_{A}
 \end{equation}
-genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außrdem hat $\textbf{u}^{k}$ die Darstellung
+genau dann, wenn $u^{k}$ die $\textit{A-orthogonale Projektion}$ von $v$ auf $U_{k} = span\{p^{0},...,p^{k-1}\}$ ist. Außerdem hat $\textbf{u}^{k}$ die Darstellung
 \begin{equation}
 P_{U_{k,\langle \cdot,\cdot \rangle}}(v) = \textbf{u}^{k} = \sum_{j=0}^{k-1} \frac {\langle v, p^{j} \rangle _{A}} {\langle p^{j}, p^{j} \rangle _{A}} p^{j}
 \end{equation}
@@ -249,5 +249,12 @@ Gegeben: $A \in \mathbb{R}^{n}$ s.p.d., $b \in \mathbb{R}^{n}$, Startvektor $x^{
 	r^{k} &= r^{k-1} - \alpha_{k-1}Ap^{k-1}
 \end{align}
 \end{subequations}
+
+%1.15. Literatur
+\subsection{Literatur:}
+\begin{enumerate}
+\item "'Numerik für Ingenieure und Naturwissenschaftler"', \\W.Dahmen \& A.Reusken, 2.,korrigierte Auflage, 2008, Seiten 566-572
+\item "'Finite Elemente"', Braess, Seiten 177-180
+\end{enumerate}
 
 \end{document}
