Compiled pdf-file.

--- a/LaTex/BachelorThesis/arbeit-vorlage.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage.tex
@@ -368,7 +368,7 @@ Offensichtlich erhält man für $\omega = 1$ wieder das Gauss-Seidel-Verfahren. 
 Sei $\mu := cos(\pi h)$. Für die diskretisierte Poisson Gleichung $Au = f$ gilt dann für den Relaxationsparameter:
 
 \begin{equation}
-\omega_{opt} := 1 + \left \frac {\mu} {1 + \sqrt{1 - \mu^{2}}} \right
+\omega_{opt} := 1 + \left( \frac {\mu} {1 + \sqrt{1 - \mu^{2}}} \right)
 \end{equation}
 
 Verlgeichen Sie hierzu auch Dahmen/Reusken (Seite 564).
